--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
 
 
   mobile_scanner: ^3.5.6
+  shelf: ^1.4.1
+
+  shelf_router: ^1.1.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
