--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
 
   shelf_router: ^1.1.4
 
+  http: ^1.2.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
