--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
 
   http: ^1.2.2
 
+  mime: ^2.0.0
+
+  path_provider: ^2.1.4
+  file_picker: ^8.1.2
+
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
